# Iot_platform

./: .dbmate  .env  .gitignore  CMakeLists.txt  README.md  config.yaml  docker-compose.yml  pom.xml
cpp_part/: .dbmate  .env  CMakeLists.txt  run_migrations.sh
cpp_part/.github/workflows/: ci.yml
cpp_part/db/: schema.sql
cpp_part/src/: main.cpp
cpp_part/src/api/: Server.cpp  Server.h
cpp_part/src/bot/: TelegramBotHandler.cpp
cpp_part/src/core/: Application.cpp  Application.h  ConfigManager.cpp  Database.cpp  Database.h  DatabaseMigrator.cpp  DatabaseMigrator.h  NotificationService.cpp  RemoteDatabaseConnection.cpp
cpp_part/src/engine/: RuleEngine.cpp
cpp_part/src/services/: AlertService.cpp  AlertService.h
cpp_part/src/smtp/: EmailService.cpp
cpp_part/src/utils/: Formatter.cpp
cpp_part/tests/unit/: DatabaseTest.cpp
db/: init.sql
db/migrations/: 20251203110925_initial_schema.sql
src/api/: TelemetryServerImpl.cpp  TelemetryServerImpl.h  httplib.h
src/bot/: TelegramBotHandler.h
src/core/: Application.cpp  Application.h  ConfigManager.cpp  ConfigManager.h  Database.cpp  Database.h  DatabaseMigrator.h  NotificationService.cpp  NotificationService.h  RemoteDatabaseConnection.h
src/engine/: RuleEngine.cpp  RuleEngine.h
src/main/java/com/iot/config/: Config.java
src/main/java/com/iot/db/: DatabaseConnection.java  DeviceDao.java  TelemetryDao.java  UserDao.java
src/main/java/com/iot/server/: HttpServer.java  HttpServerHandler.java  TelemetryRequest.java
src/main/java/com/iot/service/: TelemetryService.java  TelemetryServiceImpl.java
src/main/resources/: application.properties
src/models/: IoTData.h
src/services/: AlertService.cpp
src/simulation/: DeviceSimulator.cpp  DeviceSimulator.h
src/smtp/: EmailConfig.cpp  EmailConfig.h  EmailService.cpp  EmailService.h
src/test/java/com/iot/server/: HttpServerHandlerTest.java  HttpServerIntegrationTest.java
src/utils/: Formatter.cpp  Formatter.h
tests/: AlertEmailTests.cpp
tests/unit/: NotificationServiceTest.cpp
